# capstone

./: CMakeLists.txt  CPackConfig.txt  ChangeLog  Dockerfile  SStream.c  SStream.h  cs.c  cs_priv.h
.github/workflows/: CITest.yml  auto-sync.yml  build-wasm.yml  build-wheels-publish.yml  build_release.yml
arch/AArch64/: AArch64Mapping.c
arch/LoongArch/: LoongArchInstPrinter.c  LoongArchMapping.c
arch/M68K/: M68KDisassembler.c  M68KInstPrinter.c
arch/Mips/: MipsDisassembler.c
arch/Sparc/: SparcGenDisassemblerTables.inc  SparcInstPrinter.c  SparcMapping.c
arch/X86/: X86ATTInstPrinter.c  X86Mapping.c  X86MappingInsn.inc  X86MappingInsnOp.inc  X86MappingInsnOp_reduce.inc  X86MappingInsn_reduce.inc
bindings/python/capstone/: __init__.py
bindings/python/cstest_py/src/cstest_py/: cstest.py  details.py
cstool/: cstool_alpha.c  cstool_powerpc.c
docs/: cs_v6_release_guide.md
include/capstone/: capstone.h  sparc.h
suite/auto-sync/src/autosync/: CompareInc.py  MCUpdater.py
suite/auto-sync/src/autosync/cpptranslator/: Differ.py
suite/cstest/: CMakeLists.txt
suite/cstest/include/: test_case.h  test_mapping.h
suite/cstest/src/: test_case.c  test_detail_x86.c
tests/MC/Mips/: valid-mips32r6-el.txt.yaml  valid-mips32r6.txt.yaml
tests/details/: aarch64.yaml  cs_common_details.yaml  loongarch.yaml  sparc.yaml  x86.yaml
tests/integration/: CMakeLists.txt
tests/issues/: issues.yaml
tests/unit/: sstream.c
